fixed margins on all sections to have even whitespace

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -104,12 +104,16 @@ header .site-title {
 .player-wrapper {
   position: relative;
   padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 .react-player {
   position: absolute;
   top: 0;
+}
+
+.saleHeader {
+  padding-top: 100px;
 }
 
 /* Latest and Greatest */
@@ -119,8 +123,8 @@ header .site-title {
 }
 
 .nikeZoom {
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 5%;
 }
 
 /* sports logo */
